# ftl-document

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
examples/: README.md  linode.md  minecraft.md
src/ftl_document/: __init__.py  cli.py  core.py  generator.py  llm_service.py  validator.py
src/ftl_document/prompts/: ftl_document  tools
tests/: test_core.py  test_generator.py  test_validator.py
